Proofreading all-about-matcha.html
– Make the content have less repetitive sentences

--- a/all-about-matcha.html
+++ b/all-about-matcha.html
@@ -114,14 +114,15 @@
 
         <p>Secondary Research & Competitive Analysis</p>
 
-        I did research to understand the matcha market as well as to learn how people perceive
+        To begin this project, I did research to understand the matcha market as well as to learn how people perceive
         matcha.
         I learned that a) matcha consumption is increasing as a superfood and b) the majority of people associate
         matcha with ice cream, desserts, or lattes.
         For the competitors, I picked companies that provide tea ceremony lessons or online experiences to see how they
-        set up their booking process.
-        I discovered that Authentic Kyoto Tea Ceremony and Bikouen do not have user-friendly websites;
-        they mostly just focus on showing beautiful images to impress the users.
+        set up their booking processes.
+        The commonality I observed is these matcha shops are usually small businesses (Authentic Kyoto Tea Ceremony and
+        Bikouen), and their websites are
+        centered around a beautiful UI (images) to impress the users, rather than UX.
 
 
         <div>
@@ -139,8 +140,7 @@
         <p>Survey</p>
 
         I conducted a survey to get overall impressions about matcha and Japanese Tea Ceremony.
-        As I learned how people perceive matcha in competitive analysis, the majority of participants associated it with
-        forms of desserts and drinks.
+        The majority of participants associated it with forms of desserts and drinks, corroborating the competitive analysis.
         For Japanese Tea Ceremony, I made an assumption that people associate it with strict manners and
         a sophisticated atmosphere, so I wanted to get quantitative results from the survey.
         My assumption was fairly correct, while a few people said that it would be a relaxing and peaceful experience.
@@ -248,12 +248,10 @@
     <div class="content mirror-body">
 
         <p>Sketches</p>
-        I started by sketching ideas of what I wanted to include. I made sure to include all the important
-        information about matcha and Japanese Tea ceremony. From my research, I learned that
-        people tend to associate matcha with only desserts or drinks, so I included other information that users
-        can read to learn about other aspects of matcha.
-        I also focused on having two things on the website: matcha e-commerce and online Japanese Tea Ceremony
-        classes, since this is what the business does.
+        In order to have a sense of how the website will look, I decided to sketch out my ideas before moving on to wireframes.
+        I focused on the two core areas of the business: matcha e-commerce and online Japanese Tea Ceremony classes.
+        Additionally, I kept in mind findings from the research.
+        Since people tend to only associate matcha with desserts or drinks, I included information about other aspects of matcha for users to read about.
 
 
 
@@ -268,8 +266,10 @@
         </div>
 
         <p>Mid-Fidelity Wireframes</p>
-        I started to work on wireframes based on the sketches. I mainly focused on the booking flow so that users will be able to have a smooth experience.
-        I tried to have minimal steps users have to go through and clarify what they need to do in order to attend a class.
+        Next I moved on to wireframes. Here I mainly focused on the booking flow so that users will
+        be able to have a smooth experience.
+        In the competitive analysis I found that the direct competitors (Authentic Kyoto Tea Ceremony and Bikouen) each have a cumbersome form.
+        To improve on this, I made the booking process click-based, and require almost no typing. Click, click, click, checkout ✨.
         <div>
             <a href=#img-wireframes class="lightbox-link">
                 <img class="mirror-content2" src="matcha-img/Wireflows.jpg" alt="Mirror, low-fi wireframes">
@@ -297,10 +297,10 @@
             </a>
         </div>
 
-        Additionally, at first there were two containers for private and group classes.
+        At first there were two containers for private and group classes.
         However, I realized these two are almost the same except for the price and a few other details. I decided to
         combine
-        them into one section so that it fits into one viewport and removes duplicate information. This way, users can
+        them into one section so that it fits into one viewport and removes duplicate information, allowing users to
         more quickly understand the differences.
 
         <div>
@@ -320,11 +320,10 @@
         Next I created hi-fidelity designs based on the wireframes. I decided to change the layout of the main page
         since it
         looked text-heavy.
-        At first, I tried to leave all the text since I thought it's important for users to know what matcha is, but
-        I realized people wouldn't care and just skip the reading part if they are not interested. I ended up making the
-        text much shorter and gave users the option to read more if they are interested.
-        I also tried hard not to make the website look too sophisticated since Japanese Tea Ceremony itself is already
-        sophisticated enough to sometimes scare people away. To achieve this, I used soft and friendly colors rather
+        At first I kept all the text since I thought it's important for users to know what matcha is, but
+        I realized people would just skip it if they are not interested. I ended up making the
+        text much shorter and gave users the option to read more.
+        I avoided making the website look too sophisticated since Japanese Tea Ceremony itself is already intimidating. To achieve this, I used soft and friendly colors rather
         than
         black, which a lot of matcha businesses do. Still, the images leave a hint of sophistication which shows the
         beauty of Japanese Tea Ceremony.
@@ -374,8 +373,7 @@
             href="https://www.figma.com/proto/y0gOSsfTJKw3IbhAWIWNIo/Matcha-hi-fi-design?page-id=0%3A1&node-id=143%3A348"
             target="_blank">View Prototype</a><br><br>
         I conducted usability tests to identify any frustrations/confusion users might have during each interaction, and
-        whether it inhibits users from performing certain tasks. My main concern was if the booking form and adding a
-        starter kit in the booking process were clear to the users.
+        whether it inhibits users from performing certain tasks. My main concern was whether the booking form and starter kit were clear to the users.
 
         <ul>
             <li>Zoom (3 participants)</li>
@@ -390,9 +388,8 @@
 
 
         <p>Affinity Map</p>
-        I synthesized the results and was able to determine what makes users frustrated or confused.
-        I mainly got feedback about the tea ceremony classes and booking process. After grouping the successes and
-        failures, I was able to come up with solutions and improvements for each issue.
+        I synthesized the results, which mainly contained feedback about the tea ceremony classes and booking process.
+        After grouping the successes and failures, I came up with solutions and improvements for each issue.
 
         <div>
             <a href=#img-affinity class="lightbox-link">
@@ -414,9 +411,9 @@
         <div>
 
             <div class="mirror-content">
-                Since the website content is mostly about the tea ceremony classes, I decided to highlight the "shop"
-                text in the navigation bar in order to equally promote the matcha e-commerce. Some participants in the
-                usability test mentioned that the shop page was hard to find.
+                Some participants in the usability test mentioned that the shop page was hard to find.
+                I decided to highlight the "shop" text in the navigation bar to make it easy to find.
+                In addition, it's important to equally promote the matcha e-commerce since the website content is mostly about the tea ceremony classes.
             </div>
 
             <div>
@@ -432,11 +429,11 @@
         </div>
 
         <div>
-            <div class="mirror-content">I removed the description text and included the link, "What is Japanese Tea
-                Ceremony? so that those interested can read more.
-                I added icons to differentiate group and private classes so that users can visualize what they are. The
-                text is simple and short, yet it contains
-                differences between the class type.</div>
+            <div class="mirror-content">
+                One frustration that came up in the usability testing is that the two class types are hard to understand, buried within a long description.
+                To solve this, I removed the description text and included a link, "What is Japanese Tea Ceremony?" for more info.
+                I added icons to differentiate the group and private classes so that users can visualize what they are.
+                The text is short and simple, yet it accurately describes the differences between the class types.</div>
 
             <div>
                 <a href=#img-revision-class class="lightbox-link">
@@ -453,11 +450,9 @@
         <div>
 
             <div class="mirror-content">
-                I made a container for the booking summary and removed unnecessary text for simplicity. Before the
-                revision, users were confused about the summary because they had to read everything carefully to
-                understand it. It looks better now with less text and larger spacing for users to understand it quickly.
-                For the starter kit, I included a photo of the starter kit so the users can visualize what they are
-                ordering.
+                Many participants were confused about the summary because they had to read everything carefully to understand it. 
+                To make it simpler, I created a container for the booking summary, removed unnecessary text, and improved spacing.
+                For the starter kit, I included a photo of the starter kit so the users can visualize what they are ordering.
             </div>
 
             <div>
