Added video mock ups
- added videos in WTJ page

--- a/windows-to-japan.html
+++ b/windows-to-japan.html
@@ -91,8 +91,8 @@
                         <p>Tools:</p> Figma, Miro, Whimsical, Maze
                     </div>
                 </div>
-
                 <p>Challenges</p>
+
                 <li>Itineraries are usually overloaded with important information. How might we simplify the
                     contents when there is a lot of information?
                 </li>
@@ -105,19 +105,37 @@
             </div>
 
 
-
             <div class="video-content">
 
                 <div>
-                    <div class="video-text">Streamlined main page that automatically syncs with your time zone. <br>
-                    </div>
-                    <p>Simple and to-the-point design that delivers clear messages to the users.</p>
+                    <p>Solution 1</p>
+
+                    <div class="video-text">Streamlined main page that automatically syncs with your time zone.</div>
+                    Simple and to-the-point design that delivers clear messages to the users.
                 </div>
 
                 <video class="video" autoplay muted loop>
                     <source src="wtj-img/Main.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
+
+            </div>
+
+            <div class="video-content">
+                
+                <video class="video" autoplay muted loop>
+                    <source src="wtj-img/Main.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+
+                <div>
+                    <p>Solution 2</p>
+
+                    <div class="video-text">Selectable information &  comact displayed reading length with "read more".</div>
+                    You decide how much to read and learn. Otherwise, main page is all you need!
+                </div>
+
+
 
             </div>
 
