Add second solution for WTJ
Add second solution video and description for Windows to Japan portfolio.

--- a/windows-to-japan.html
+++ b/windows-to-japan.html
@@ -124,15 +124,15 @@
             <div class="video-content">
                 
                 <video class="video" autoplay muted loop>
-                    <source src="wtj-img/Main.mp4" type="video/mp4">
+                    <source src="wtj-img/Readmore.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
 
                 <div>
                     <p>Solution 2</p>
 
-                    <div class="video-text">Selectable information &  comact displayed reading length with "read more".</div>
-                    You decide how much to read and learn. Otherwise, main page is all you need!
+                    <div class="video-text">Easier scanning with "read more" button & a chat feature for quick help.</div>
+                    You decide how much to read and learn. Let our chat bot take care of your hassles.
                 </div>
 
 
