--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
     <title>Kotomi Cogdill</title>
-    <link rel="shortcut icon" type="img/jpg" href="img/favicon.svg"/>
+    <link rel="shortcut icon" type="img/jpg" href="img/favicon.svg" />
 
 </head>
 
@@ -33,9 +33,9 @@
                 <input type="checkbox" style="display: none" id="menu-btn" />
                 <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
                 <div class="navlinks">
-                    <a class="navlink" href="about.html">About</a>
                     <a class="navlink" href="work.html">Work</a>
-                    <a class="navlink" target="_blank" href="img/Kotomi-Cogdill-Resume-2020.pdf">Resume</a>
+                    <a class="navlink" href="about.html">About</a>
+                    <a class="navlink" target="_blank" href="img/Resume_Kotomi_Cogdill_0122.pdf">Resume</a>
                     <a class="navlink" href="contact.html">Contact</a>
                 </div>
             </div>
@@ -86,10 +86,11 @@
                 </a>
 
                 <div>
-                    <div class="title-shurui">STUDENT PROJECT</div>
+                    <div class="title-shurui">VOLUNTEER PROJECT</div>
                     <div class="case-study-title">Windows to Japan</div>
                     An end-end application that replaces your physical itinerary with a digital one..
-                    <div><a class="case-study-cta case-study-cta-button" href="windows-to-japan.html">View case study</a>
+                    <div><a class="case-study-cta case-study-cta-button" href="windows-to-japan.html">View case
+                            study</a>
                     </div>
                 </div>
 
@@ -108,7 +109,7 @@
                 </a>
 
                 <div>
-                    <div class="title-shurui">STUDENT PROJECT</div>
+                    <div class="title-shurui">PERSONAL PROJECT</div>
                     <div class="case-study-title">Brightwheel</div>
                     Adding a new parent-parent messaging feature to an existing childcare app.
                     <div><a class="case-study-cta case-study-cta-button" href="Brightwheel.html">View case study</a>
@@ -131,7 +132,7 @@
                 </a>
 
                 <div>
-                    <div class="title-shurui">STUDENT PROJECT</div>
+                    <div class="title-shurui">PERSONAL PROJECT</div>
                     <div class="case-study-title">All About Matcha</div>
                     A responsive e-commerce website that provides online Japanese Tea Ceremony classes and matcha
                     products.
@@ -173,8 +174,8 @@
         <div class="content-home">
             <div class="socialmedia-main">
 
-                <a class="icon" href="https://www.linkedin.com/in/kotomitcogdill/" target="_blank"><svg viewBox="0 0 40 40"
-                        xmlns="http://www.w3.org/2000/svg">
+                <a class="icon" href="https://www.linkedin.com/in/kotomitcogdill/" target="_blank"><svg
+                        viewBox="0 0 40 40" xmlns="http://www.w3.org/2000/svg">
                         <path
                             d="M30.9423 39.9999C31.1141 39.9999 38.8816 39.9982 38.7115 39.9982C39.4017 39.9982 39.9619 39.4382 39.9619 38.7482C39.3784 25.6533 43.0329 11.835 29.3952 11.835C26.7726 11.835 24.6836 12.73 23.1781 13.9133C23.1781 11.4783 20.5456 12.825 14.4687 12.4633C13.7784 12.4633 13.2183 13.0233 13.2183 13.7133C13.7217 37.3232 12.0946 39.9982 14.4687 39.9982H22.2378C24.4936 39.9982 23.0581 36.8183 23.4882 26.3516C23.4882 22.0283 24.7387 21.1816 26.8994 21.1816C29.2901 21.1816 29.6919 22.8416 29.6919 26.5616C30.1204 36.8399 28.6949 39.9999 30.9423 39.9999ZM26.8994 18.6816C19.4119 18.6816 20.9874 26.9116 20.9874 37.4983H15.7191V14.9633H20.6773V17.1266C20.6773 18.3266 22.5063 18.9166 23.1431 17.71C23.9634 16.1533 26.0941 14.335 29.3952 14.335C35.2754 14.335 37.4611 17.2233 37.4611 24.9949V37.4999H32.1927C32.1927 25.5933 33.4531 18.6816 26.8994 18.6816Z" />
                         <path
