--- a/contact.html
+++ b/contact.html
@@ -31,9 +31,9 @@
                 <input class="menu-btn" type="checkbox" style="display: none" id="menu-btn" />
                 <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
                 <div class="navlinks">
-                    <a class="navlink" href="about.html">About</a>
                     <a class="navlink" href="work.html">Work</a>
-                    <a class="navlink" href="">Resume</a>
+                    <a class="navlink" href="about.html">About</a>
+                    <a class="navlink" href="img/Resume_Kotomi_Cogdill_0122.pdf">Resume</a>
                     <a class="navlink" href="contact.html">Contact</a>
                 </div>
             </div>
