--- a/windows-to-japan.html
+++ b/windows-to-japan.html
@@ -261,11 +261,11 @@
         <div>
 
             <a href=#img-user-flow class="lightbox-link">
-                <img class="mirror-content2" src="wtj-img/User-flow.jpg" alt="User flow">
+                <img class="mirror-content2" src="wtj-img/User-flow.png" alt="User flow">
             </a>
 
             <a href="#!" class="lightbox" id="img-user-flow">
-                <span style="background-image: url('wtj-img/User-flow.jpg')"></span>
+                <span style="background-image: url('wtj-img/User-flow.png')"></span>
             </a>
 
         </div>
